# HaskellSnipplets

./: BatchSender.hs  BatchServer.hs  CompareSets.hs  Snipplets.cabal  ZipList.hs
